--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "^1.10.0",
     "lucide-vue-next": "^0.503.0",
     "nuxt": "^3.16.2",
     "vue": "^3.5.13",
